frontend/tests/cases/positive/indexed/empty-data-decl.gr
-- gr --no-eval

data Z where

data S a where

data Vec n a where
  Nil : Vec Z a;
  Cons : ∀ {m : Type} . a → Vec m a → Vec (S m) a

test : Vec (S Z) Int
test = Cons 1 Nil
